2011-06-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.5.0) Remove CC.dbif. The Maurer distance is quite misleading
	if the vessel's cross section is very elliptical.

	* FiltersToolbox/skeleton_label.m:

	- (v0.10.0) Add merging of neighbouring branches that are a
	continuation of each other. The merging is controlled by new input
	arguments alphamax, p.

2011-06-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.4.2) CC.BifurcationPixelIdx has changed from vector to
	vector of cells.

	* FiltersToolbox/skeleton_label.m:

	- (v0.9.4) Get bifurcation point indices for all types of
	branches, not only leaves.

2011-06-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add subversion property "svn:eol-style native" to all text
	files, so that people working with Windows will get the correct
	end of line characters.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- (v0.3.1) Tidy up code to match Gerardus coding guidelines.

	- (v0.3.0) Patch submitted by Pablo Lamata. Add input argument for
	interpolation type. Before, interpolation was performed by finding
	the nearest voxel to the sampling point (more approrpiate for
	binary segmentations). Now, it's also possible to select linear
	and spline interpolation, which is more appropriate for gray scale
	images.

2011-06-01  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.4.1) Fix bug. The segment cannot be straightened if the
	skeleton doesn't have at least 3 voxels.

2011-05-31  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_skeleton_prune.m:

	- (v0.2.2) Pruning was not always working great. Before,
	bifurcation voxels were always preserved, and this created
	problems with 1-voxel branches sometimes appearing on the sides of
	main branches. In the last version, bifurcation voxels were always